# watermelon

./: .gitlab-ci.yml  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml
watermelon/: Cargo.toml
watermelon-mini/: Cargo.toml
watermelon-mini/src/: lib.rs  non_standard_zstd.rs  util.rs
watermelon-mini/src/proto/: authenticator.rs  connector.rs  mod.rs
watermelon-mini/src/proto/connection/: compression.rs  mod.rs  security.rs
watermelon-net/: Cargo.toml
watermelon-net/src/: happy_eyeballs.rs  lib.rs
watermelon-net/src/connection/: mod.rs  streaming.rs  websocket.rs
watermelon-nkeys/: Cargo.toml
watermelon-nkeys/src/: crc.rs  lib.rs  seed.rs
watermelon-proto/: Cargo.toml
watermelon-proto/src/: connect.rs  lib.rs  message.rs  queue_group.rs  server_addr.rs  server_error.rs  server_info.rs  status_code.rs  subject.rs  subscription_id.rs  tests.rs
watermelon-proto/src/headers/: map.rs  mod.rs  name.rs  value.rs
watermelon-proto/src/proto/: client.rs  mod.rs  server.rs
watermelon-proto/src/proto/decoder/: framed.rs  mod.rs  stream.rs
watermelon-proto/src/proto/encoder/: framed.rs  mod.rs  stream.rs
watermelon-proto/src/util/: buf_list.rs  lines_iter.rs  mod.rs  split_spaces.rs  uint.rs
watermelon/src/: atomic.rs  handler.rs  lib.rs  multiplexed_subscription.rs  subscription.rs  tests.rs
watermelon/src/client/: builder.rs  from_env.rs  mod.rs  quick_info.rs  tests.rs
watermelon/src/client/commands/: mod.rs  publish.rs  request.rs
watermelon/src/client/jetstream/: mod.rs
watermelon/src/client/jetstream/commands/: consumer_batch.rs  consumer_list.rs  consumer_stream.rs  mod.rs  stream_list.rs
watermelon/src/client/jetstream/resources/: consumer.rs  mod.rs  stream.rs
