[package]
name = "watermelon-mini"
version = "0.1.0"
description = "Minimal NATS Core client implementation"
categories = ["api-bindings", "network-programming"]
keywords = ["nats", "client"]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["websocket", "non-standard-zstd"]

[dependencies]
tokio = { version = "1", features = ["net"] }
tokio-rustls = { version = "0.26", default-features = false }
rustls-platform-verifier = "0.5"

watermelon-net = { version = "0.1", path = "../watermelon-net" }
watermelon-proto = { version = "0.1", path = "../watermelon-proto" }
watermelon-nkeys = { version = "0.1", path = "../watermelon-nkeys", default-features = false }

thiserror = "2"

# non-standard-zstd
async-compression = { version = "0.4", features = ["tokio"], optional = true }

[features]
default = ["aws-lc-rs"]
websocket = ["watermelon-net/websocket"]
aws-lc-rs = ["tokio-rustls/aws-lc-rs", "watermelon-net/aws-lc-rs", "watermelon-nkeys/aws-lc-rs"]
ring = ["tokio-rustls/ring", "watermelon-net/ring", "watermelon-nkeys/ring"]
fips = ["tokio-rustls/fips", "watermelon-net/fips", "watermelon-nkeys/fips"]
non-standard-zstd = ["watermelon-net/non-standard-zstd", "watermelon-proto/non-standard-zstd", "dep:async-compression", "async-compression/zstd"]

[lints]
workspace = true
