[package]
name = "watermelon-net"
version = "0.1.0"
description = "Low-level NATS Core network implementation"
categories = ["api-bindings", "network-programming"]
keywords = ["nats", "client"]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["websocket", "non-standard-zstd"]

[dependencies]
tokio = { version = "1", features = ["net", "time", "io-util"] }
futures-util = { version = "0.3.14", default-features = false, features = ["alloc"] }
bytes = "1"

tokio-websockets = { version = "0.11", features = ["client", "rand"], optional = true }
futures-sink = { version = "0.3.14", default-features = false, optional = true }
http = { version = "1", optional = true }

watermelon-proto = { version = "0.1", path = "../watermelon-proto" }

thiserror = "2"
pin-project-lite = "0.2.15"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
futures-util = { version = "0.3.14", default-features = false }
claims = "0.8"

[features]
default = ["aws-lc-rs"]
websocket = ["dep:tokio-websockets", "dep:futures-sink", "dep:http"]
ring = ["tokio-websockets?/ring"]
aws-lc-rs = ["tokio-websockets?/aws-lc-rs"]
fips = ["tokio-websockets?/fips"]
non-standard-zstd = ["watermelon-proto/non-standard-zstd"]

[lints]
workspace = true
