[package]
name = "watermelon-proto"
version = "0.1.0"
description = "#[no_std] NATS Core Sans-IO protocol implementation"
categories = ["network-programming", "parser-implementations", "no-std"]
keywords = ["nats", "client"]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["non-standard-zstd"]

[dependencies]
bytes = { version = "1", default-features = false }
bytestring = { version = "1", default-features = false, features = ["serde"] }
url = { version = "2.5.3", default-features = false, features = ["serde"] }
percent-encoding = { version = "2", default-features = false, features = ["alloc"] }
memchr = { version = "2.4", default-features = false }
unicase = "2.7"

serde = { version = "1.0.107", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

thiserror = { version = "2", default-features = false }

[dev-dependencies]
claims = "0.8"

[features]
default = ["std"]
std = ["bytes/std", "url/std", "percent-encoding/std", "memchr/std", "serde/std", "serde_json/std", "thiserror/std"]
non-standard-zstd = []

[lints]
workspace = true
